Fix styles for identity labels
It was hidden unexpectedly in default configurations, also being
truncated with dynamic icon option enabled.

--- a/chrome/hide-urlbar-icons.css
+++ b/chrome/hide-urlbar-icons.css
@@ -3,7 +3,7 @@
     #urlbar {
       &[pageproxystate="valid"] {
         &:not([breakout-extend]) {
-          :where(#identity-icon-label, #tracking-protection-icon-container, #userContext-icons, .urlbar-page-action, .verifiedDomain) {
+          :where(#tracking-protection-icon-container, #userContext-icons, .urlbar-page-action, .verifiedDomain) {
             transition: opacity var(--phoenix-transition-speed) var(--phoenix-transition-delay);
           }
         }
@@ -15,7 +15,7 @@
     #urlbar {
       &[pageproxystate="valid"] {
         &:not([breakout-extend]) {
-          :where(#identity-icon-label, #tracking-protection-icon-container, #userContext-icons, .urlbar-page-action:not(.urlbar-addon-page-action), .verifiedDomain) {
+          :where(#tracking-protection-icon-container, #userContext-icons, .urlbar-page-action:not(.urlbar-addon-page-action), .verifiedDomain) {
             opacity: 0;
             transition: opacity var(--phoenix-transition-quick-speed);
           }
