--- a/chrome/phoenix.css
+++ b/chrome/phoenix.css
@@ -27,6 +27,7 @@
   --phoenix-transition-speed: .25s;
   --phoenix-urlbar-collapsed-width: 360px;
   --phoenix-urlbar-expanded-inset: 20vw;
+  --phoenix-urlbar-identity-label-width: 12ch;
   --phoenix-urlbar-input-padding: .5em;
   --phoenix-urlbar-input-width: 120px;
   --phoenix-window-dragging-area-width: 8px;
